--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -21,7 +21,7 @@
                         <p class="card-text">
                             Tutor: 
                             <% if (course.tutorlink) { %>
-                                <a href="<%= course.tutorlink %>" class="tutor" target="_blank" rel="noopener noreferrer">
+                                <a href="<%= course.tutorlink %>" class="tutor">
                                     <%= course.tutor %>
                                 </a>
                             <% } else { %>
