--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,7 +13,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="/" id = "home">Home</a>
         <a class="nav-link active" href="/courses">All courses</a>
-        <a class="nav-link active" href="/dashboard">Dashboard</a>
+        <!-- <a class="nav-link active" href="/dashboard">Dashboard</a> -->
         <a class="nav-link active" href="/contact">Contact Us</a>
         <a class="nav-link active getUser"><i class="fa-solid fa-user"></i></a>
       </div>
