--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,15 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/rating.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/logo.png">
 </head>
 <body> 
     <%- include("../includes/navbar.ejs") %>
+    <%- include("../includes/flash.ejs") %>
     <div class = "userAccess">
-        <a href="/login" class = "signin">Sign in</a>
-        <hr>
-        <a href="/signup" class = "signup">Sign up</a>
+        <%if(currUser){%>
+            <a href="/dashboard" class = "signup"><%=currUser.username%></a>
+            <hr>
+            <a href="/logout" class = "signup" style="color: red;">Logout</a>
+        <%}else{%>
+            <a href="/login" class = "signin">Login</a>
+            <hr>
+            <a href="/signup" class = "signup">Signup</a>
+        <%}%>
     </div>
     <%- body %>
     <div class = "chatbot">
