--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -12,7 +12,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <a href="/show/<%= course._id %>" style="color: black;">
+                                    <a href="/shows/<%=course._id %>" style="color: black;">
                                         <h5 class="card-title"><%= course.title %></h5>
                                     </a>
                                     <a href="<%= course.tutorlink %>" class="card-text">Tutor: <%= course.tutor %></a>
@@ -32,7 +32,7 @@
             </div>
             <div class="profile">
                 <img src="https://img.freepik.com/free-psd/3d-illustration-person-with-sunglasses_23-2149436188.jpg?t=st=1729198547~exp=1729199147~hmac=1e8af087514025937e30e22845f9de9a0293b3601d48951740f086cd84548627" alt="user-profile">
-                <h4 style="margin-top: 0.5rem;">Krishna Muskawad</h4>
+                <h4 style="margin-top: 0.5rem;"><%=currUser.username%></h4>
                 <div class="user-links">
                     <a href="https://www.linkedin.com/in/krishna-muskawad/">
                         <i class="fa-brands fa-linkedin"></i>
