Reviews Deletion Updates

--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -38,7 +38,7 @@
                             <%= course.tutor || "Unknown Tutor" %>
                         <% } %>
                         <br>
-                        <i class="fa-solid fa-star"></i> <%= course.rating || "No Rating" %> / 5
+                        <i class="fa-solid fa-star"></i> / 5
                     </p>
                     <button type="button" class="btn btn-success">Enroll Now</button>
                     <hr>
