--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -60,7 +60,7 @@
                 <%for(result of quizResult){%>
                     <div class="quizr">
                         <h5><%=result.chapter%></h5>
-                        <span><b><%=result.percentage%></b></span>
+                        <span><b><%=result.percentage%></b><b> %</b></span>
                     </div>
                     <br>
                 <%}%>
