--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -10,7 +10,7 @@
     <div class="home-container">
         <% if (courses.length > 0) { %>
             <% for (let course of courses) { %>
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 20rem;">
                     <img 
                         src="<%= course.image || '/images/default-course.jpg' %>" 
                         class="card-img-top" 
@@ -30,7 +30,7 @@
                             <br>
                             <i class="fa-solid fa-star"></i> <%= course.rating %> / 5
                         </p>
-                        <a href="/shows/<%= course._id %>" class="btn btn-primary">Explore</a>
+                        <a href="/shows/<%= course._id %>" class="btn btn-primary explore-btn">Explore</a>
                     </div>
                 </div>
             <% } %>
@@ -38,6 +38,6 @@
             <p class="no-courses-message">No courses available at the moment. Please check back later!</p>
         <% } %>
     </div>
-
+    <br><br><br><br>
     <%- include("../includes/footer.ejs") %>
 </body>
