--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,14 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-square-whatsapp"></i>
+            <a href="https://www.linkedin.com/in/krishna-muskawad"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/KrishnaM0"><i class="fa-brands fa-github"></i></a>
+            <a href="https://wa.me/919699002107"><i class="fa-brands fa-whatsapp" style="font-weight: 600;"></i></a>
         </div>
         <div class = "f-info-brand">&copy;EduX Private Limited</div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy </a>
-            <a href="/terms"> Terms</a>
+            <a href="/">Privacy </a>
+            <a href="/"> Terms</a>
         </div>
     </div>
 </footer> 
