--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,21 +14,10 @@
 <body> 
     <%- include("../includes/navbar.ejs") %>
     <%- include("../includes/flash.ejs") %>
-    <div class = "userAccess">
-        <%if(currUser){%>
-            <a href="/dashboard" class = "signup"><%=currUser.username%></a>
-            <hr>
-            <a href="/logout" class = "signup" style="color: red;">Logout</a>
-        <%}else{%>
-            <a href="/login" class = "signin">Login</a>
-            <hr>
-            <a href="/signup" class = "signup">Signup</a>
-        <%}%>
-    </div>
+    <%- include("../includes/userAccess.ejs") %>
     <%- body %>
-    <div class = "chatbot">
-        <i class="fa-brands fa-rocketchat"></i>
-    </div>
+    <%- include("../includes/chatbot.ejs") %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src = "/js/script.js"></script>
     <script src="/js/shows.js"></script>
