--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -14,11 +14,11 @@
                         <label for="floatingInput">Email address</label>
                     </div>
                     <div class="input-group">
-                        <span class="input-group-text">Message</span>
+                        <div class="input-group-text">Message</div>
                         <textarea class="form-control" aria-label="With textarea" placeholder="Message here..!" name = "cmsg" required></textarea>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" style="width: 50%;">Submit</button>
+                <button type="submit" class="btn btn-primary" style="width: 60%;">Submit</button>
             </div>
             <div class = "contact-img">
                 <img src="https://media.istockphoto.com/id/1290300704/vector/man-in-call-center-support-customer-support-answering-questions.jpg?s=612x612&w=0&k=20&c=ybVXSP9FUI8j4coZGtUbO363vWf4eqn9PwmjHT6uu4w=" alt="contact-img">
