UI Responsiveness Updates

--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -3,6 +3,9 @@
     <div class="shows-container">
         <!-- Chapters Sidebar -->
         <div class="shows-chapters">
+            <div class="fa-bars-chapterNav-div">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <p class="chapters-overview shows-chapters-name active-chapter" onclick="showOverview()">Overview</p>
             <hr>
             <% if (course.syllabus && course.syllabus.length > 0) { %>
