--- a/public/css/style.css
+++ b/public/css/style.css
@@ -625,6 +625,21 @@ footer {
     transform: scale(1.1);
 }
 
+.fa-bars-chapterNav-div{
+    padding: 1rem;
+    display: none;
+}
+.fa-bars-chapterNav-div .fa-bars{
+    font-size: 1.2rem;
+    
+}
+.fa-bars-chapterNav-div .fa-bars:hover{
+    cursor: pointer;
+    color:#0039f6;
+    font-size: 1.5rem;
+}
+
+
 /* Rotation Animation */
 @keyframes rotateX {
     0% {
@@ -696,7 +711,7 @@ footer {
     .shows-chapters{
         position: fixed;
         background-color: white;
-        width: 70%;
+        width: 80%;
         height: 100%;
         left: 0rem;
         z-index: 10000;
@@ -715,9 +730,18 @@ footer {
 }
   
 @media (max-width: 730px) {
-    .lectures{
-        width: 10rem !important;
+    iframe{
+        width: 100% !important;
         height : 15rem !important;
+    }
+    .shows-chapter-notes{
+        width: 100%;
+    }
+    .shows-quiz-section{
+        width: 100%;
+    }
+    .shows-quiz{
+        width: 100%;
     }
     .shows-chapter-img{
         width: 100%;
@@ -729,5 +753,11 @@ footer {
     }
     .login-container{
         width: 90%;
+    }
+    .fa-bars-chapterNav-div{
+        display: block;
+    }
+    .alert{
+        width: 90% !important;
     }
 }
