--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -24,7 +24,7 @@
                         <div class="card mb-3" style="max-width: 30rem;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img style="height:100%;" src="<%= course.image %>" class="img-fluid rounded-start" alt="img">
+                                    <img style="height:100%;" src="<%= course.image %>" class="img-fluid rounded-start dashboards-card-img" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -59,7 +59,7 @@
                         <div class="card mb-3" style="max-width: 30rem;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img style="height:100%;" src="<%= quizCourses.course.image || '/images/default-course.jpg' %>" class="img-fluid rounded-start" alt="img">
+                                    <img style="height:100%;" src="<%= quizCourses.course.image || '/images/default-course.jpg' %>" class="img-fluid rounded-start dashboards-card-img" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -77,7 +77,21 @@
                                             </div>
                                         </div>
                                         <hr>
-                                        <span><small>Attempted at : <%=quizCourses.attemptedAt%></small></span>
+                                        <% 
+                                            const formattedDate = new Date(quizCourses.attemptedAt).toLocaleString("en-US", { 
+                                                weekday: "short", 
+                                                year: "numeric", 
+                                                month: "short", 
+                                                day: "numeric", 
+                                                hour: "2-digit", 
+                                                minute: "2-digit" 
+                                            }).replace(/, /g, " / "); 
+                                        %>
+
+                                        <span><small>Attempted At : <%= formattedDate %></small></span>
+
+
+                                        <!-- <span><small>Attempted at : <%=quizCourses.attemptedAt%></small></span> -->
                                     </div>
                                 </div>
                             </div>
