--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -20,26 +20,38 @@
                 <h3 class="mt-3" style="margin-bottom : 1rem; text-decoration : overline red;">Enrolled Courses</h3>
                 <br>
                 <div class="enrolled">
-                    <% for (let course of courses) { %>
-                        <div class="card mb-3" style="max-width: 30rem;">
+                    <% for (let enrolledCourse of enrolledCourses) { %>
+                        <div class="card mb-3" style="max-width: 32rem;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img style="height:100%;" src="<%= course.image %>" class="img-fluid rounded-start dashboards-card-img" alt="img">
+                                    <img style="height:100%;" src="<%=enrolledCourse.course.image%>" class="img-fluid rounded-start dashboards-card-img" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <a href="/shows/<%=course._id %>" style="color: black;">
-                                            <h5 class="card-title"><%= course.title %></h5>
+                                        <a href="/shows/<%=enrolledCourse.course._id %>" style="color: black;">
+                                            <h5 class="card-title"><%= enrolledCourse.course.title %></h5>
                                         </a>
-                                        <a href="<%= course.tutorlink %>" class="card-text">Tutor: <%= course.tutor %></a>
+                                        <a href="<%= enrolledCourse.course.tutorlink %>" class="card-text">Tutor: <%= enrolledCourse.course.tutor %></a>
                                         <br>
                                         <!-- Progress bar for course completion -->
                                         <div style="display: flex; align-items: center;">
-                                            <span style="margin-right: 0.5rem;"><%= course.attendancePercentage %>90%</span>
+                                            <span style="margin-right: 0.5rem;"><%=enrolledCourse.progress%>%</span>
                                             <div style="flex-grow: 1; background-color: #e0e0e0; height: 10px; border-radius: 10px;">
-                                                <div style="width: 90%; background: linear-gradient(to right, #6a00ff, #f200ff); height: 100%; border-radius: 10px;"></div>
+                                                <div style="width:<%=enrolledCourse.progress%>%; background: linear-gradient(to right, #6a00ff, #f200ff); height: 100%; border-radius: 10px;"></div>
                                             </div>
                                         </div>
+                                        <hr>
+                                        <% 
+                                            const enrolledDate = new Date(enrolledCourse.enrollmentDate).toLocaleString("en-US", { 
+                                                weekday: "short", 
+                                                year: "numeric", 
+                                                month: "short", 
+                                                day: "numeric", 
+                                                hour: "2-digit", 
+                                                minute: "2-digit" 
+                                            }).replace(/, /g, " / "); 
+                                        %>
+                                        <span><small>Enrolled At : <%= enrolledDate %></small></span>
                                     </div>
                                 </div>
                             </div>
