--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -50,7 +50,7 @@
                     </p>
                     <% if (currUser) { %>
                         <% if (isEnrolled) { %>
-                            <button type="button" class="btn btn-secondary" disabled>Enrolled</button>
+                            <button type="button" class="btn btn-warning" style="margin-left:0;" disabled>Enrolled</button>
                         <% } else { %>
                             <form action="/enroll/<%=course._id%>" method="POST">
                                 <button type="submit" class="btn btn-success">Enroll Now</button>
@@ -151,7 +151,11 @@
                                         placeholder="Enter your notes here..!"><%= userNotes ? userNotes.notes : '' %></textarea>
                                     <div class="notes-btns">
                                         <input type="hidden" name="chapter" value="<%= chapter.chapter %>">
-                                        <button type="submit" class="btn btn-success">Save Notes</button>
+                                        <%if(isEnrolled){%>
+                                            <button type="submit" class="btn btn-success">Save Notes</button>
+                                        <%}else{%>
+                                            <button type="submit" class="btn btn-success" disabled>Not Enrolled</button>
+                                        <%}%>
                                         <button type="button" class="btn btn-danger download-pdf-btns" onclick="downloadPdfButton('<%= index %>')">
                                             <i class="fa-solid fa-download" style="margin-right: 0.3rem;"></i> PDF
                                         </button>
@@ -189,11 +193,12 @@
                                     <% } %>
                                     <% if (currUser) { %>
                                         <%if(isEnrolled){%>
-                                            <button type="submit" class="btn btn-outline-danger">Submit</button>
+                                            <button type="submit" class="btn btn-outline-danger" style="font-weight: 550;">Submit</button>
+                                        <%}else{%>
+                                            <button type="submit" class="btn btn-outline-danger" style="font-weight: 550;" disabled>Enroll to Submit</button>
                                         <%}%>
                                     <% } else { %>
-                                        <button type="submit" class="btn btn-outline-danger" disabled>Submit</button>
-                                        <small style="color: red;"><b>Login &amp; Enroll now for submitting the quiz</b></small>
+                                        <a href="/login" class="btn btn-primary" style="font-weight: 550;">Login to submit</a>
                                     <% } %>
                                 </div>
                                 
